GNOME Bugzilla – Bug 750842
Fixes to the form filler
Last modified: 2015-06-16 10:45:37 UTC
It currently doesn't display properly because of wrong numeric types and not using GtkStyleContext properly. Attached patches fix both issues.
Created attachment 305139 [details] [review] web-extension: use proper number format for position dom properties DOM bindings use double, not long. This fixes the form filler popup not showing up.
Created attachment 305140 [details] [review] web-extension: fix color of form filler popup Style context calls were missing setting the state previously as required by GtkStyleContext.
Review of attachment 305139 [details] [review]: ::: embed/web-extension/ephy-web-extension.c @@ +621,3 @@ style_attribute = g_strdup_printf ("position: absolute; z-index: 2147483647;" "cursor: default;" + "width: %lfpx;" %lf exist? ::: lib/ephy-web-dom-utils.c @@ +452,2 @@ g_object_get (element, "offset-left", &offset_left, This is one of the reasons why I don't like g_object_get(), I would also change this to use the public getters instead (webkit_dom_element_get_offset_left/top).
Review of attachment 305140 [details] [review]: Yes, this changed in GTK+ :-/ don't we need to save/restore the context?
Review of attachment 305139 [details] [review]: ::: embed/web-extension/ephy-web-extension.c @@ +621,3 @@ style_attribute = g_strdup_printf ("position: absolute; z-index: 2147483647;" "cursor: default;" + "width: %lfpx;" %lf is for double, no? ::: lib/ephy-web-dom-utils.c @@ +452,2 @@ g_object_get (element, "offset-left", &offset_left, Good point.
Review of attachment 305140 [details] [review]: Because of how we use this context, we don't need to, but it would be theoretically better.
Attachment 305139 [details] pushed as 8a3c7df - web-extension: use proper number format for position dom properties Attachment 305140 [details] pushed as 772f289 - web-extension: fix color of form filler popup