web-extension: use proper number format for position dom properties

DOM bindings use double, not long. This fixes the form filler
popup not showing up. Use the proper DOM bindings API instead
of g_object_get() to avoid this happening again.

https://bugzilla.gnome.org/show_bug.cgi?id=750842